--- a/public/styles/_lists.scss
+++ b/public/styles/_lists.scss
@@ -420,3 +420,28 @@ ul.list--active-filters {
 		}
 	}
 }
+
+.list--categories-mini {
+	@extend .list-unstyled;
+	& > li {
+		margin-bottom: 0.25em;
+		line-height: 1.1;
+		&:not(.list-item--more) {
+			padding-left: 2ch;
+			position: relative;
+			&::before {
+				content: "\f07b";
+				font-family: "Font Awesome 5 Free";
+				font-weight: 400;
+				display: flex;
+				position: absolute;
+				left: 0;
+				top: 0;
+				height: 1.25em;
+				font-size: 0.75em;
+				//background-color: chartreuse;
+				align-items: center;
+			}
+		}
+	}
+}
