--- a/public/styles/_forms.scss
+++ b/public/styles/_forms.scss
@@ -161,7 +161,23 @@ form#form_checkouts_summary .form-group--id_confirmation {
 	&.form-group--has-error {
 		border: 2px solid $danger;
 		background-color: $danger;
+		border: none;
 		color: white;
+
+		position: relative;
+		&::before {
+			display: block;
+			background-color: $danger;
+			content: " ";
+			display: block;
+			position: absolute;
+			left: -6px;
+			top: -2px;
+			width: calc(100% + 12px);
+			height: calc(100% + 2px);
+			//border: 4px solid $danger;
+		}
+
 		label {
 			color: white;
 		}
