floating basket info in progress

--- a/public/styles/application.scss
+++ b/public/styles/application.scss
@@ -126,6 +126,8 @@ $enable-deprecation-messages: false;
 
 @import "favorite_heart";
 
+@import "basket_info_float";
+
 @import "shared/clearfix";
 @import "shared/loading";
 @import "shared/buttons";
