--- a/public/styles/_prices.scss
+++ b/public/styles/_prices.scss
@@ -30,6 +30,11 @@
 	&--secondary {
 		display: block;
 		font-size: 0.875rem;
+		.currency_main {
+			color: inherit;
+			font-size: inherit;
+			font-weight: inherit;
+		}
 	}
 	
 	ul {
