Mini table display for shopping cart content

--- a/public/styles/application.scss
+++ b/public/styles/application.scss
@@ -70,6 +70,8 @@ $enable-deprecation-messages: false;
 
 @import "tables-cart";
 
+@import "tables-cart_mini";
+
 @import "lists";
 
 @import "lists_files";
