--- a/public/styles/_tables-cart_mini.scss
+++ b/public/styles/_tables-cart_mini.scss
@@ -1,10 +1,20 @@
 table.table-products--mini {
   $tableW: 500px;
 
-
+  @include media-breakpoint-up(xs) {
+  width: 100%;
   max-width: $tableW;
+  display: block;
+  padding: 0 $modal-inner-padding;
+  border-bottom: 1px solid $border-color;
+
+  // left and right margin must be set to avoid negative margin on xs view (as defined in .table-products)
+  margin: 0 !important;
 
   tbody.table-products__list {
+
+    display: block;
+    border-bottom: none;
 
     tr.table-products__item {
 
@@ -16,7 +26,7 @@ table.table-products--mini {
       grid-gap: 5px;
       gap: 5px;
 
-      margin: 5px;
+      margin: 5px 0;
       border-bottom: 1px solid $border-color;
       &:last-child {
         border-bottom: none;
@@ -27,6 +37,7 @@ table.table-products--mini {
         padding: 0;
         border: none;
         border-bottom: none;
+        display: block;
         //font-size: $font-size-sm;
 
         &.table-products {
@@ -56,6 +67,7 @@ table.table-products--mini {
           &__price {
             font-size: 1em;
             grid-area: price;
+            align-self: start !important;
             border-bottom: none;
             .currency_main {
               font-size: 1em;
@@ -63,7 +75,7 @@ table.table-products--mini {
           }
 
           &__vat-percent, &__unit-price, &__id, &__actions {
-            display: none;
+            display: none !important;
           }
 
         }
@@ -74,6 +86,10 @@ table.table-products--mini {
       display: block !important;
     }
 
+    .table-products__id {
+      display: none !important;
+    }
+
   }
 
-}
+}}
