--- a/public/styles/_slider.scss
+++ b/public/styles/_slider.scss
@@ -14,6 +14,7 @@
 		&__image {
 			//height: 425px;
 			flex-basis: 50%;
+			flex-grow: 1.5;
 			background-size: cover;
 			background-repeat: no-repeat;
 			background-position: center center;
@@ -35,6 +36,7 @@
 		}
 
 		@include media-breakpoint-down(xs){
+			height: unset;
 			&__text {
 				flex-basis: 45vw;
 			}
