Styles fixed - used variable $fa-font-family

--- a/public/styles/_articles.scss
+++ b/public/styles/_articles.scss
@@ -58,7 +58,7 @@ article {
 				display: flex;
 				justify-content: center;
 				align-items: center;
-				font-family: "Font Awesome 5 Free";
+				font-family: $fa-font-family;
 				font-weight: 900;
 				content: "\f053";
 				font-size: 1.5rem;
