--- a/public/styles/_faq.scss
+++ b/public/styles/_faq.scss
@@ -25,7 +25,7 @@
 			content: "\f078";
 			//content: "\f077";
 			display: block;
-			font-family: "Font Awesome 5 Free";
+			font-family: $fa-font-family;
 			font-weight: bold;
 			transform: rotate(0);
 			transition: all 0.25s;
