[pickup_points] refactoring]

--- a/lib/delivery_services/src/public/styles/delivery-service-branches.scss
+++ b/lib/delivery_services/src/public/styles/delivery-service-branches.scss
@@ -57,11 +57,11 @@
 #atk14-widget-zasilkovna {
 	height: 600px;
 }
-.modal--zasilkovna > .modal-dialog {
+.modal--pickup_point > .modal-dialog {
 	max-width: 1000px;
 }
 
-.modal--zasilkovna {
+.modal--pickup_point {
 	.modal-body {
 		padding: 0;
 	}
