added quick add icon

--- a/public/admin/styles/_header.scss
+++ b/public/admin/styles/_header.scss
@@ -10,3 +10,10 @@ ol.breadcrumb {
 		font-weight: bold;
 	}
 }
+
+li.nav-item.quick-add-menu {
+	& a.nav-link {
+		color: $green;
+		font-size: 1.125rem;
+	}
+}
