--- a/public/admin/styles/_header.scss
+++ b/public/admin/styles/_header.scss
@@ -13,7 +13,9 @@ ol.breadcrumb {
 
 li.nav-item.quick-add-menu {
 	& a.nav-link {
-		color: $green;
-		font-size: 1.125rem;
+		.fa, .fas {
+			color: $green;
+			font-size: 1.125rem;
+		}
 	}
 }
