--- a/public/styles/application.scss
+++ b/public/styles/application.scss
@@ -134,6 +134,8 @@ $enable-deprecation-messages: false;
 
 @import "basket_info_float";
 
+@import "photoswipe";
+
 @import "shared/clearfix";
 @import "shared/loading";
 @import "shared/buttons";
