Photoswipe works with galleries iObjejcts. Fixed problem with duplicate slides in Slider Gallery iObject

--- a/public/styles/_photoswipe.scss
+++ b/public/styles/_photoswipe.scss
@@ -9,6 +9,8 @@
     position: absolute;
     left: 0;
     bottom: 0;
+    font-size: $font-size-sm;
+    line-height: 1.2;
     &:empty {
       display: none;
     }
