--- a/public/styles/_photoswipe.scss
+++ b/public/styles/_photoswipe.scss
@@ -17,6 +17,14 @@
     .iobject--picture__link, .iobject__title__separator {
       display: none !important;
     }
+    .iobject__title, .gallery-item__title {
+      outline: 1px solid red;
+      font-weight: bold;
+      margin: 0;
+    }
+    .iobject__description, .gallery-item__description {
+      outline: 1px solid aqua;
+    }
     a {
       color: #fff;
       text-decoration: underline;
