--- a/public/styles/_slider.scss
+++ b/public/styles/_slider.scss
@@ -214,6 +214,13 @@
 					padding: $grid-gutter-width/4 $grid-gutter-width/2;
 					font-size: $font-size-sm;
 					text-align: center;
+					line-height: 1.25;
+					.gallery-item__title {
+						font-weight: bold;
+					}
+					.gallery-item__description {
+						font-weight: normal;
+					}
 				}
 			}
 		}
