--- a/public/styles/_photoswipe.scss
+++ b/public/styles/_photoswipe.scss
@@ -1,11 +1,13 @@
 // Additional styling for PhotoSwipe 5+
 .pswp {
+  $captionHorizontalPadding: 12px;
+  $captionVerticalPadding: 6px;
   .pswp__custom-caption {
     background: rgba(black, 0.5);
     font-size: 16px;
     color: #fff;
     width: 100%;
-    padding: 6px 12px;
+    padding: 0 $captionHorizontalPadding;
     position: absolute;
     left: 0;
     bottom: 0;
@@ -20,8 +22,23 @@
     .iobject__title, .gallery-item__title {
       font-weight: bold;
       margin: 0;
+      margin-top: $captionVerticalPadding;
+      margin-bottom: $captionVerticalPadding;
+      &:last-child {
+        margin-bottom: $captionVerticalPadding;
+      }
+      &:empty {
+        display: none;
+      }
     }
     .iobject__description, .gallery-item__description {
+      &:empty {
+        display: none;
+      }
+      &:last-child {
+        margin-top: -1 * $captionVerticalPadding;
+        margin-bottom: $captionVerticalPadding;
+      }
     }
     a {
       color: #fff;
