Recommended price display fix

--- a/public/styles/_prices.scss
+++ b/public/styles/_prices.scss
@@ -114,7 +114,7 @@ $price-font-size-xs: 0.75rem;
 			font-weight: normal;
 			//color: $gray-500;
 			font-size: $price-font-size-xs;
-			.currency_main {
+			> .currency_main {
 				text-decoration: line-through;
 				&__price {
 				}
