Footer populated with real data

--- a/app/views/mailer/mjml/partials/footer.mjml
+++ b/app/views/mailer/mjml/partials/footer.mjml
@@ -1,3 +1,15 @@
+		<mj-raw>
+		{assign eshop Store::FindByCode("eshop")}
+		{if 'app.contact.social.facebook'|system_parameter}{assign show_fb true}{/if}
+		{if 'app.contact.social.instagram'|system_parameter}{assign show_ig true}{/if}
+		{if 'app.contact.social.linkedin'|system_parameter}{assign show_li true}{/if}
+		{if 'app.contact.social.pinterest'|system_parameter}{assign show_pi true}{/if}
+		{if 'app.contact.social.snapchat'|system_parameter}{assign show_sn true}{/if}
+		{if 'app.contact.social.twitter'|system_parameter}{assign show_tw true}{/if}
+		{if 'app.contact.social.vimeo'|system_parameter}{assign show_vm true}{/if}
+		{if 'app.contact.social.youtube'|system_parameter}{assign show_yt true}{/if}
+		{if 'app.contact.social.soundcloud'|system_parameter}{assign show_sc true}{/if}
+		</mj-raw>
 		<mj-section>
 			<mj-column>
 				<mj-spacer></mj-spacer>
@@ -8,21 +20,75 @@
 			<mj-column>
 				<mj-text mj-class="footertext">
 					<p>
-						<a href="#">Superior Products</a><br>
-						Domažlická 1<br>
-						130 00 Praha 3
+						<a href="{!$region->getDefaultUrl()}">{"app.name.official"|system_parameter}</a><br/>
+						{if $eshop}
+						{$eshop->getAddressStreet()}<br/>
+						{if $eshop->getAddressStreet2()}
+						{$eshop->getAddressStreet2()}<br/>
+						{/if}
+						{$eshop->getAddressZip()} {$eshop->getAddressCity()}<br/>
+						{/if}
 					</p>
-					<p>Tel: +420 123 456 789</p>
+					<p>Tel: <a href="tel:{"app.contact.phone"|system_parameter|replace:".":""}">{"app.contact.phone"|system_parameter|display_phone}</a></p>
 				</mj-text>
 			</mj-column>
 			<mj-column>
 				<mj-social font-size="15px" icon-size="30px" mode="vertical" align="left">
-					<mj-social-element name="facebook" href="https://mjml.io/">
+
+					<mj-raw>{if $show_fb}</mj-raw>
+					<mj-social-element name="facebook-noshare" href="{'app.contact.social.facebook'|system_parameter}">
 						Facebook
 					</mj-social-element>
-					<mj-social-element name="instagram" href="https://mjml.io/">
+					<mj-raw>{/if}</mj-raw>
+
+					<mj-raw>{if $show_ig}</mj-raw>
+					<mj-social-element name="instagram-noshare" href="{'app.contact.social.instagram'|system_parameter}">
 						Instagram
 					</mj-social-element>
+					<mj-raw>{/if}</mj-raw>
+
+					<mj-raw>{if $show_li}</mj-raw>
+					<mj-social-element name="linkedin-noshare" href="{'app.contact.social.linkedin'|system_parameter}">
+						LinkedIn
+					</mj-social-element>
+					<mj-raw>{/if}</mj-raw>
+
+					<mj-raw>{if $show_pi}</mj-raw>
+					<mj-social-element name="pinterest-noshare" href="{'app.contact.social.pinterest'|system_parameter}">
+						Pinterest
+					</mj-social-element>
+					<mj-raw>{/if}</mj-raw>
+
+					<mj-raw>{if $show_sn}</mj-raw>
+					<mj-social-element name="snapchat-noshare" href="{'app.contact.social.snapchat'|system_parameter}">
+						Snapchat
+					</mj-social-element>
+					<mj-raw>{/if}</mj-raw>
+
+					<mj-raw>{if $show_tw}</mj-raw>
+					<mj-social-element name="twitter-noshare" href="{'app.contact.social.twitter'|system_parameter}">
+						Twitter
+					</mj-social-element>
+					<mj-raw>{/if}</mj-raw>
+
+					<mj-raw>{if $show_vm}</mj-raw>
+					<mj-social-element name="vimeo-noshare" href="{'app.contact.social.vimeo'|system_parameter}">
+						Vimeo
+					</mj-social-element>
+					<mj-raw>{/if}</mj-raw>
+
+					<mj-raw>{if $show_yt}</mj-raw>
+					<mj-social-element name="youtube-noshare" href="{'app.contact.social.youtube'|system_parameter}">
+						YouTube
+					</mj-social-element>
+					<mj-raw>{/if}</mj-raw>
+
+					<mj-raw>{if $show_sc}</mj-raw>
+					<mj-social-element name="soundcloud-noshare" href="{'app.contact.social.soundcloud'|system_parameter}">
+						SoundCloud
+					</mj-social-element>
+					<mj-raw>{/if}</mj-raw>
+
 				</mj-social>
 			</mj-column>
 		</mj-section>
