--- a/app/views/mailer/mjml/_master_template.mjml
+++ b/app/views/mailer/mjml/_master_template.mjml
@@ -1,11 +1,13 @@
 <mjml>
 	<mj-head>
-	
 		<mj-preview>{!$preheader_text}</mj-preview>
-		
 		<mj-include path="partials/styles.mjml"></mj-include>
 	</mj-head>
 	<mj-body>
+		<mj-raw>
+			{assign voucher_code "ATK14ESHOP"}
+			{assign voucher_amount "20 %"}
+		</mj-raw>
 		<mj-raw><!-- header -->{* tato znacka se pouziva pri konverzi HTML textu do plain text *}</mj-raw>
 		<mj-include path="partials/header.mjml"></mj-include>
 		<mj-raw><!-- /header --></mj-raw>
@@ -15,6 +17,10 @@
 		<mj-include path="partials/order-overview.mjml"></mj-include>
 		<mj-raw>{/if}</mj-raw>
 		
+		<mj-raw>{if $voucher_amount && $voucher_code }</mj-raw>
+		<mj-include path="partials/voucher.mjml"></mj-include>
+		<mj-raw>{/if}</mj-raw>
+
 		<mj-include path="partials/products-gallery.mjml"></mj-include>
 		<mj-include path="partials/image-wide.mjml"></mj-include>
 		
