--- a/app/views/mailer/mjml/partials/styles.mjml
+++ b/app/views/mailer/mjml/partials/styles.mjml
@@ -75,4 +75,6 @@
 			<mj-class name="order-overview" full-width="full-width" background-color="white" />
 			<mj-class name="order-item" />
 			<mj-class name="product-card" padding-bottom="20px" />
+			// voucher
+			<mj-class name="voucher" full-width="full-width" background-color="{$brand_color}" />
 		</mj-attributes>
