fixed phone number display

--- a/app/views/mailer/mjml/partials/footer.mjml
+++ b/app/views/mailer/mjml/partials/footer.mjml
@@ -10,6 +10,7 @@
 		{if 'app.contact.social.youtube'|system_parameter}{assign show_yt true}{/if}
 		{if 'app.contact.social.soundcloud'|system_parameter}{assign show_sc true}{/if}
 		{assign stores Store::FindAll("visible AND (code IS NULL OR code!='eshop')",[])}
+		{assign phone_number "app.contact.phone"|system_parameter|replace:' ':''|replace:".":""}
 		</mj-raw>
 		<mj-section>
 			<mj-column>
@@ -30,7 +31,7 @@
 						{$eshop->getAddressZip()} {$eshop->getAddressCity()}<br/>
 						{/if}
 					</p>
-					<p>Tel: <a href="tel:{"app.contact.phone"|system_parameter|replace:".":""}">{"app.contact.phone"|system_parameter|display_phone}</a></p>
+					<p>Tel: <a href="tel:{$phone_number}">{"app.contact.phone"|system_parameter|display_phone}</a></p>
 				</mj-text>
 			</mj-column>
 			<mj-column>
