--- a/app/views/mailer/mjml/_master_template.mjml
+++ b/app/views/mailer/mjml/_master_template.mjml
@@ -14,17 +14,17 @@
 		<mj-include path="partials/text.mjml"></mj-include>
 		
 		<mj-raw>{if $message_type == "notify_order_creation" }</mj-raw>
-		<mj-include path="partials/order-overview.mjml"></mj-include>
+		<mj-include path="partials/order_overview.mjml"></mj-include>
 		<mj-raw>{/if}</mj-raw>
 		
 		<mj-raw>{if $voucher_amount && $voucher_code }</mj-raw>
 		<mj-include path="partials/voucher.mjml"></mj-include>
 		<mj-raw>{/if}</mj-raw>
 
-		<mj-include path="partials/products-gallery.mjml"></mj-include>
-		<mj-include path="partials/image-wide.mjml"></mj-include>
+		<mj-include path="partials/products_gallery.mjml"></mj-include>
+		<mj-include path="partials/image_wide.mjml"></mj-include>
 		
-		<mj-include path="partials/text-cta.mjml"></mj-include>
+		<mj-include path="partials/text_cta.mjml"></mj-include>
 		<mj-raw><!-- footer -->{* tato znacka se pouziva pri konverzi HTML textu do plain text *}</mj-raw>
 		<mj-include path="partials/footer.mjml"></mj-include>
 		<mj-raw><!-- /footer --></mj-raw>
